--- a/android/local.properties
+++ b/android/local.properties
@@ -1,2 +1,2 @@
-sdk.dir=/Users/kyawphyoehan/Library/Android/sdk
-flutter.sdk=/Users/kyawphyoehan/Documents/Developments/flutter
+sdk.dir=C:\\Users\\User\\AppData\\Local\\Android\\sdk
+flutter.sdk=C:\\src\\flutter
