--- a/android/local.properties
+++ b/android/local.properties
@@ -1,2 +1,2 @@
-sdk.dir=C:\\Users\\User\\AppData\\Local\\Android\\sdk
-flutter.sdk=C:\\src\\flutter
+sdk.dir=/Users/ame/Library/Android/sdk
+flutter.sdk=/Users/ame/Documents/Developments/flutter
