--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,8 +10,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  latlong2: ^0.9.0
   tuple:
-  google_maps_flutter:
 
 dev_dependencies:
   flutter_test:
