--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,7 +10,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  latlong2: ^0.9.0
+  google_maps_flutter: ^2.5.0
   tuple:
 
 dev_dependencies:
