--- a/macos/Flutter/ephemeral/Flutter-Generated.xcconfig
+++ b/macos/Flutter/ephemeral/Flutter-Generated.xcconfig
@@ -1,6 +1,6 @@
 // This is a generated file; do not edit or check into version control.
-FLUTTER_ROOT=/Users/kyawphyoehan/Documents/Developments/flutter
-FLUTTER_APPLICATION_PATH=/Users/kyawphyoehan/Desktop/f2p/fary_trip_model
+FLUTTER_ROOT=/Users/ame/Documents/Development/flutter
+FLUTTER_APPLICATION_PATH=/Users/ame/Documents/Development/flutter projects/fary_trip_model
 COCOAPODS_PARALLEL_CODE_SIGN=true
 FLUTTER_BUILD_DIR=build
 FLUTTER_BUILD_NAME=0.0.1
