--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,7 +10,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  latlong2: ^0.9.0
+  maplibre_gl: ^0.20.0
   tuple:
 
 dev_dependencies:
